# memory_rs

./: .gitignore  Cargo.toml  README.md
docs/: architecture.html  architecture.md  codebase.md  features.md
src/: config.rs  coordinator.rs  main.rs  mcp.rs
src/layers/: codebase.rs  episodic.rs  graph.rs  mod.rs  semantic.rs  shared.rs  working.rs
src/search/: mod.rs  ranker.rs
tests/: test_grpc.rs
