[package]
name = "openmemory_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
# MCP SDK for Stdio / JSON-RPC
rmcp = { version = "0.16.0", features = ["server"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Graph engine
petgraph = "0.6"
parking_lot = "0.12"

# Embeddings & Vector arithmetic
fastembed = { version = "5", default-features = false, features = ["hf-hub-rustls-tls"] }
ndarray = "0.15"

# Database storage
rusqlite = { version = "0.31", features = ["bundled"] }

# Parsing & Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"

# Parsing codebases
tree-sitter = "0.22"

# Helper tools
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"

[workspace]
# Empty workspace block prevents Cargo from treating this as a member of the parent workspace.

