[package]
name = "openmemory_rs"
version = "0.1.1"
edition = "2024"

[dependencies]
# MCP SDK for Stdio / JSON-RPC
rmcp = { version = "0.16.0", features = ["server"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Graph engine
petgraph = "0.6"
parking_lot = "0.12"

fastembed = { version = "=4.9.1", default-features = false, features = ["hf-hub-rustls-tls"] }
ndarray = "0.15"
ort = { version = "=2.0.0-rc.9", features = ["download-binaries"] }

# Database storage
rusqlite = { version = "0.32", features = ["bundled"] }
small-world-rs = "1.1"

# Parsing & Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"

# Parsing codebases
tree-sitter = "0.24"

# Helper tools
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
tree-sitter-rust = "=0.23.0"
tree-sitter-python = "=0.23.0"
tree-sitter-javascript = "=0.23.0"
tree-sitter-typescript = "=0.23.0"
tonic = "0.11"
prost = "0.12"

[build-dependencies]
tonic-build = "0.11"



